# Trmarketplace

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  PROGRESS.md  README.md  ROADMAP.md  config.toml.example  docker-compose.yml
.github/workflows/: ci.yml
contracts/: EscrowLock.sol
docs/: CRYPTO_SPEC.md  OPERATIONS.md  THREAT_MODEL.md
frontend/: api.js  app.js  crypto.js  index.html  styles.css
migrations/: 001_init.sql  002_add_pubkeys.sql  003_audit_logs.sql  004_pg_zk.sql
scripts/: backup.sh  ci.sh  dev.ps1  dev.sh  generate-onion.sh  harden.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/background/: dummy_worker.rs  listing_expiry.rs  mod.rs  notification_scanner.rs  payment_poller.rs  time_lock.rs
src/crypto/: blind_sig.rs  client.rs  differential_privacy.rs  encryption.rs  escrow.rs  hash.rs  hmac_auth.rs  mod.rs  oblivious.rs  stealth.rs  transition_sig.rs  wallet.rs  worker_pubkey.rs  zk.rs
src/db/: mod.rs  models.rs
src/gateway/: auth_common.rs  error_unifier.rs  mod.rs  rate_limit_middleware.rs  ratelimit.rs  response_padding.rs  security.rs  socks_pool.rs  state.rs  stateless_auth.rs  tor_guard.rs  validation.rs
src/services/: admin.rs  auth.rs  chat.rs  disputes.rs  listings.rs  mod.rs  orders.rs  public.rs  search.rs
src/services/escrow/: btc.rs
src/services/payments/: btc.rs  btc_client.rs  coinswap.rs  mod.rs  stealth_escrow.rs  subscribe.rs  xmr.rs
src/tor/: mod.rs
src/worker/: mod.rs
tests/: admin_unlinkability.rs  api_test.rs  auth_flow.rs  crypto_attacks.rs  crypto_test.rs  error_handling.rs  identity_unlinkability.rs  listing_flow.rs  multi_user.rs  oracle_attacks.rs  order_flow.rs  replay_attacks.rs  security_test.rs  server_blindness.rs  timing_obfuscation.rs  traffic_analysis.rs  transition_sig.rs
tests/common/: mod.rs
wasm/: Cargo.toml
wasm/src/: auth.rs  decrypt.rs  encrypt.rs  keygen.rs  lib.rs  listing.rs  search.rs  transition.rs
