[package]
name = "tor-marketplace-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM client-side crypto for torMarketplace"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
blake3 = "1"
ciborium = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
